--- a/ghostty/config
+++ b/ghostty/config
@@ -6,8 +6,9 @@ theme = Dracula Custom
 
 shell-integration-features = no-cursor,no-sudo,title
 
-cursor-style = underline
+cursor-style = bar
 cursor-style-blink = true
+copy-on-select = true
 
 window-padding-x = 20
 window-padding-y = 10
@@ -22,3 +23,6 @@ background-blur-radius = 20
 
 macos-icon = custom-style
 macos-icon-frame = plastic
+
+# Quick Terminal
+keybind = global:cmd+grave_accent=toggle_quick_terminal
